[build-system]
requires = ["flit-core >=2"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "eudex"
author = "Rémi Adon"
author-email = "remi.adon@gmail.com"
home-page = "https://github.com/remiadon/eudex"
requires-python=">=3"
description-file="README.rst"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]



